Add a sample of medium risk level rows into high risk level check workflow